@@ -1,3 +1,12 @@
+2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[build] Move non-filename DIFF* configuration to configure.in.
+
+	* configure.in (diffutils): In this AC_ARG_WITH form,
+	use `AS_HELP_STRING' and incorporate DIFF* var defaulting.
+	(DIFF_SUCCESS): Delete AC_SUBST; add AC_DEFINE_UNQUOTED.
+	(DIFF_FAILURE, DIFF_TROUBLE, DIFFFLAGS, DIFF_L, DIFF3_BIN): Likewise.
+
 2010-03-06  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[build] Move `SENDMAIL' configuration to configure.in.
